# AI_Art_Generator

./: .gitignore  01_Windows_CMake.bat  01_Windows_CMake_Debug.bat  02_Windows_CMake_Release.bat  03_Windows_Build_Run_Debug.bat  04_Windows_Build_Run_Release.bat  05_Windows_CMake_Build_Run_MNIST_Debug.bat  06_Windows_CMake_Build_Run_TEST_ALL_Debug.bat  07_Windows_Build_Run_TEST_ALL_Debug.bat  CMakeLists.txt  README.md
AI_Art_Generator/: main.cu
AI_Art_Generator/Utils/: config.hpp  cuda_helper.cu  cuda_helper.hpp  error_check_cuda.cu  error_check_cuda.hpp  file_writer_neural_net.cu  file_writer_neural_net.hpp  gpu_info_print.cu  gpu_info_print.hpp
Algos/: reduce.hpp
MNIST/: MNIST_main.cu  MNIST_neural_network.cu  MNIST_neural_network.hpp
Tests/: reduce.test.cu
